edited dark mode background and fixed border issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Arvo&family=Gruppo&family=Inclusive+Sans&family=Karla:ital,wght@1,500&family=Nixie+One&family=Noto+Sans+SC:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Arvo&family=Gruppo&family=Inclusive+Sans&family=Karla:ital,wght@1,500&family=Nixie+One&family=Noto+Sans+SC:wght@700&display=swap');
 
-* {
+html {
   box-sizing: border-box;
 }
  *:before, *:after {
@@ -14,15 +14,12 @@ body {
   font-family: "Poppins", sans-serif;
   height: 100vh;
   line-height: 1.3;
-  background: #e3d4c0;
+  background:#e3d4c0;
   overflow: hidden;
   text-rendering: geometricPrecision;
   -webkit-font-smoothing: antialiased;
 }
-#theme {
-  width: 100vw;
-  height: 100vh;
-}
+
 /* .dark-mode-theme body {
   background: #374049;
 } */
@@ -216,6 +213,7 @@ section.active {
   font-size: 2em;
   font-weight: 200;
 }
+
 /* section h2 {
   color: white;
   font-size: 4em;
@@ -253,11 +251,6 @@ to {
   pointer-events: none;
 }
 a.brand-btn {
-  /* display: flex;
-  justify-content: flex-start;
-  flex-wrap: nowrap;
-  align-content: flex-start;
-  margin-right: auto; */
   text-decoration:underline;
   color:tomato;
   font-size: 4em;
@@ -335,6 +328,10 @@ a:focus {
     /* color: steelblue; */
   }
  
+  #theme {
+    width: 100vw;
+    height: 100vh;
+  }
 
   a {
     text-decoration: none;
@@ -342,11 +339,11 @@ a:focus {
   }
 /* light mode */
 .dark-mode-theme #toggle-btn {
-  background: #333333;
+  background: #797269;
   color:azure;
 }
 .dark-mode-theme {
-  background:#333333;
+  background:#797269;
   opacity:100%;
   color: var(--background-color);
 }
@@ -355,5 +352,6 @@ a:focus {
 }
 .dark-mode-theme .home-container h3 {
   color:azure;
-  font-weight: 200;
+
 }
+
